[package]
name = "api-get-sample-rs"
version = "0.1.0"
authors = ["4832cl0n"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.1", features=["json", "blocking"]}
serde = {version = "1.0.104", features = ["derive"]}
serde_derive = "1.0.104"
serde_json = "^1.0.41"
tokio = {version = "0.2.11", features = ["macros"]}